Removing unused param nodes_ids from swagger
